finalized viewing of pdf doc

--- a/Dialogs/dDocInfo.xaml
+++ b/Dialogs/dDocInfo.xaml
@@ -12,10 +12,11 @@
         WindowStartupLocation="CenterScreen"
         FontFamily="Century Gothic"      
         Title="MainDialog" 
-        Height="750.660" 
+        Height="652.66" 
         Width="565.317" 
         WindowStyle="None">
-    <Grid>
+    <Grid Margin="0,0,0,70">
+
 
         <Label          
             Foreground="White"
@@ -29,7 +30,7 @@
         <Grid            
             Background="White"
             HorizontalAlignment="Left"
-            Margin="0,50,0,54"
+            Margin="0,50,0,-22"
             Width="565">
 
             <Border                        
@@ -38,15 +39,15 @@
                 CornerRadius="5"                       
                 BorderThickness="2" Margin="10">
             </Border>
-            <Grid
-                DataContext="{Binding Path=docInfo}"
-                Tag="DocDatas">
+            <Grid Tag="DocDatas"
+                DataContext="{Binding Path=docInfo}" Margin="0,0,0,10"
+                >
                 <Label       
                     FontSize="17"
                     FontWeight="DemiBold"
                     HorizontalAlignment="Left"                                 
                     Margin="20,15,0,0"                                 
-                    VerticalAlignment="Top" Height="57" Width="407"
+                    VerticalAlignment="Top" Height="57" Width="100"
                     Content="SUBJECT">
                 </Label>
 
@@ -85,8 +86,8 @@
                     Height="57" Width="407"
                     Content="{Binding Path=DoctTypes}">
                 </Label>
-                
-                
+
+
                 <Label        
                     FontSize="18"
                     FontWeight="DemiBold"
@@ -94,7 +95,7 @@
                     Margin="20,120,0,0"                                 
                     VerticalAlignment="Top" 
                     Height="57" 
-                    Width="407"
+                    Width="171"
                     Content="CONTROL NUMBER">
                 </Label>
 
@@ -115,7 +116,7 @@
                     Margin="20,160,0,0"                                 
                     VerticalAlignment="Top" 
                     Height="57" 
-                    Width="407"
+                    Width="277"
                     Content="DATE ADDED">
                 </Label>
 
@@ -129,7 +130,117 @@
                     Content="{Binding Path=DateAdd, StringFormat='yyyy-MM-dd'}">
                 </Label>
 
+                <Grid 
+                    Background="#EC4D37" 
+                    Margin="0,376,0,125"/>
+                <Label          
+                    Foreground="White"
+                    FontSize="25"
+                    FontWeight="DemiBold"
+                    HorizontalAlignment="Left"                                 
+                    Margin="20,380,0,0"                                 
+                    VerticalAlignment="Top" 
+                    Height="57" 
+                    Width="407"
+                    Content="TIMEFRAME">
+                </Label>
+
                 <Label                            
+                    FontSize="17"
+                    FontWeight="DemiBold"
+                    HorizontalAlignment="Left"                                 
+                    Margin="20,420,0,0"                                 
+                    VerticalAlignment="Top" 
+                    Height="57" 
+                    Width="150"
+                    Content="FOR SIGNATURE">
+                </Label>
+
+                <Label          
+                    Foreground="Teal"
+                    FontSize="14"
+                    HorizontalAlignment="Left"                                 
+                    Margin="20,445,0,0"                                 
+                    VerticalAlignment="Top" 
+                    Height="37" 
+                    Width="150"
+                    Content="{Binding Path=ForSigned}">
+                </Label>
+
+                <Label                            
+                    FontSize="17"
+                    FontWeight="DemiBold"
+                    HorizontalAlignment="Left"                                 
+                    Margin="225,420,0,0"                                 
+                    VerticalAlignment="Top" 
+                    Height="57" 
+                    Width="100"
+                    Content="SIGNED">
+                </Label>
+
+                <Label          
+                    Foreground="Teal"
+                    FontSize="14"
+                    HorizontalAlignment="Left"                                 
+                    Margin="225,445,0,0"                                 
+                    VerticalAlignment="Top" 
+                    Height="37" 
+                    Width="150"
+                    Content="{Binding Path=Signed}">
+                </Label>
+                <Label                            
+                    FontSize="17"
+                    FontWeight="DemiBold"
+                    HorizontalAlignment="Left"                                 
+                    Margin="405,420,0,0"                                 
+                    VerticalAlignment="Top" 
+                    Height="57" 
+                    Width="100"
+                    Content="RECEIVED">
+                </Label>
+
+                <Label          
+                    Foreground="Teal"
+                    FontSize="14"
+                    HorizontalAlignment="Left"                                 
+                    Margin="405,445,0,0"                                 
+                    VerticalAlignment="Top" 
+                    Height="37" 
+                    Width="150"
+                    Content="{Binding Path=ForRelease}">
+                </Label>
+
+
+                <Grid 
+                    Background="#EC4D37"
+                    Height="Auto"
+                    Margin="0,217,0,284"/>
+
+                <Button
+                    Click="buttonShowPDF"
+                    Visibility="Hidden"
+                    x:Name="btnSigned"
+                    Content="VIEW"
+                    Margin="225,460,210,24">
+                </Button>
+
+                <Button     
+                    Click="buttonShowPDF"
+                    Visibility="Hidden"
+                    x:Name="btnReceived"
+                    Content="VIEW"
+                    Margin="405,460,30,24">
+                </Button>
+
+            </Grid>
+
+
+            <Grid Tag="Routes"
+                DataContext="{Binding Path=routeInfo}" Margin="0,0,0,-9"
+                >
+
+                <Label     
+                    Foreground="White"
                     FontSize="25"
                     FontWeight="DemiBold"
                     HorizontalAlignment="Left"                                 
@@ -144,10 +255,10 @@
                     FontSize="17"
                     FontWeight="DemiBold"
                     HorizontalAlignment="Left"                                 
-                    Margin="20,255,0,0"                                 
+                    Margin="20,260,0,0"                                 
                     VerticalAlignment="Top" 
                     Height="57" 
-                    Width="407"
+                    Width="240"
                     Content="ORIGIN/OFFICE">
                 </Label>
 
@@ -155,14 +266,14 @@
                     FontSize="14"
                     Foreground="Teal"
                     HorizontalAlignment="Left"                                 
-                    Margin="30,275,0,0"                                 
+                    Margin="30,280,0,0"                                 
                     VerticalAlignment="Top" 
                     Height="57" 
                     Width="230">
                     <Label.Content>
                         <AccessText                         
                             TextWrapping="Wrap"                                                
-                            Text="{Binding Path}"                        
+                            Text="{Binding Path=OriginOffice}"                        
                             Width="220"                        
                             Height="51" />
                     </Label.Content>
@@ -175,8 +286,8 @@
                     Margin="20,310,0,0"                                 
                     VerticalAlignment="Top" 
                     Height="57" 
-                    Width="407"
-                    Content="FOCAL">
+                    Width="240"
+                    Content="ORIGIN/FOCAL">
                 </Label>
 
                 <Label                            
@@ -190,27 +301,20 @@
                     <Label.Content>
                         <AccessText                         
                             TextWrapping="Wrap"                                                
-                            Text="{Binding Path=FocalID}"                          
+                            Text="{Binding Path=FocalName}"                          
                             Width="220"                        
                             Height="51" />
                     </Label.Content>
                 </Label>
-            </Grid>
-
-
-            <Grid
-                DataContext="{Binding Path=addresseeInfo}"
-                Tag="Addressee">
- 
 
                 <Label                            
                     FontSize="17"
                     FontWeight="DemiBold"
                     HorizontalAlignment="Left"                                 
-                    Margin="310,255,0,0"                                 
+                    Margin="295,260,0,0"                                 
                     VerticalAlignment="Top" 
                     Height="57" 
-                    Width="407"
+                    Width="260"
                     Content="ADDRESSEE/OFFICE">
                 </Label>
 
@@ -218,55 +322,54 @@
                     FontSize="14"
                     Foreground="Teal"
                     HorizontalAlignment="Left"                                 
-                    Margin="320,275,0,0"                                 
+                    Margin="305,280,0,0"                                 
                     VerticalAlignment="Top" 
                     Height="57" 
                     Width="230">
                     <Label.Content>
                         <AccessText                         
                             TextWrapping="Wrap"                                                
-                            Text="{Binding Path=Office}"                        
+                            Text="{Binding Path=AddresseeOffice}"                        
                             Width="220"                        
                             Height="51" />
                     </Label.Content>
                 </Label>
-                
+
                 <Label                            
                     FontSize="17"
                     FontWeight="DemiBold"
                     HorizontalAlignment="Left"                                 
-                    Margin="310,310,0,0"                                 
+                    Margin="295,310,0,0"                                 
                     VerticalAlignment="Top" 
                     Height="57" 
-                    Width="407"
-                    Content="FULL NAME">
+                    Width="260"
+                    Content="ADDRESSEE/NAME">
                 </Label>
-                
+
                 <Label                            
                     FontSize="14"
                     Foreground="Teal"
                     HorizontalAlignment="Left"                                 
-                    Margin="320,330,0,0"                                 
+                    Margin="305,330,0,0"                                 
                     VerticalAlignment="Top" 
                     Height="57" 
                     Width="230">
                     <Label.Content>
                         <AccessText                         
                             TextWrapping="Wrap"                                                
-                            Text="{Binding Path=FullName}"                        
+                            Text="{Binding Path=AddresseeName}"                        
                             Width="215"                        
                             Height="51" />
                     </Label.Content>
                 </Label>
             </Grid>
-
         </Grid>
-       
+
         <Button            
             Content="OKAY"
             Name="btnCancel"
             Style="{StaticResource MaterialDesignRaisedDarkButton}"    
             ToolTip="OKAY"
-            Margin="0,697,0,0" Height="Auto" Click="btnCancel_Click"/>
+            Margin="0,605,0,-78" Height="Auto" Click="btnCancel_Click"/>
     </Grid>
 </Window>
