--- a/View/vDocuments.xaml
+++ b/View/vDocuments.xaml
@@ -90,14 +90,14 @@
             Margin="10,166,0,0" 
             VerticalAlignment="Top"
             AutoGenerateColumns="False"
-            
+            HorizontalScrollBarVisibility="Disabled"
             Width="1014"
             AlternatingRowBackground="WhiteSmoke"
             ItemsSource="{Binding Path=DocDatas}">
             <DataGrid.Columns>
                 <DataGridTextColumn                    
                     Header=" Date Added"                    
-                    MinWidth="150"
+                    MinWidth="165"
                     Width="*"
                     Binding="{Binding Path=DateAdd}"/>
                 <DataGridTextColumn
